# SimplePanorama

./: .gitignore  CMakeLists.txt  LICENSE  Panorama.kdev4  README.md  todo
.kdev4/: Panorama.kdev4
res/: _bundle_adjust_tools.cpp  _bundle_adjust_tools.h  gtk.css  stitch_backup.cpp
src/: .main.cpp.kate-swp  main.cpp  temp.cpp
src/classes/: ._panorama.cpp.kate-swp  ._panorama.h.kate-swp  _image.cpp  _image.h  _panorama.cpp  _panorama.h
src/math/: _blending.cpp  _blending.h  _bundle_adjust.cpp  _bundle_adjust.h  _bundle_adjust_fast.cpp  _bundle_adjust_fast.h  _bundle_adjust_main.cpp  _bundle_adjust_main.h  _bundle_adjust_tools.cpp  _bundle_adjust_tools.h  _config_parser.cpp  _config_parser.h  _distance_cut.cpp  _distance_cut.h  _gain_compensation.cpp  _gain_compensation.h  _graph_cut.cpp  _graph_cut.h  _graph_cut_helper.cpp  _graph_cut_helper.h  _homography.cpp  _homography.h  _img_manipulation.cpp  _img_manipulation.h  _maths.cpp  _maths.h  _projection.cpp  _projection.h  _stitch.cpp  _stitch.h  _straightening.cpp  _straightening.h  _util.cpp  _util.h  full_bunde.cpp
src/system/: _config_parser.cpp  _config_parser.h  _util.cpp  _util.h
src/test/: _test.cpp  _test.h
src/ui/: ._config.cpp.kate-swp  ._flowbox.cpp.kate-swp  _build_ui.cpp  _build_ui.h  _config.cpp  _config.h  _create_menu.cpp  _create_menu.h  _dialog.cpp  _dialog.h  _flowbox.cpp  _flowbox.h  _gtk_ops.cpp  _gtk_ops.h  _gtk_vars.h  _image_viewer.cpp  _image_viewer.h  _main_windows.cpp  _main_windows.h  _progress_bar.cpp  _progress_bar.h  _toolbar.cpp  _toolbar.h  _viewer_toolbar.cpp  _viewer_toolbar.h  ui.cpp  ui.h
